src/objects/QPMS__Maintenance__c.object
<CustomObject>
    <description>Allow users to create a new Maintenance request to manage the working condition of an asset.</description>
    <fields>
        <fullName>QPMS__Age__c</fullName>
        <formula>IF( ISBLANK( QPMS__Closed_Date__c ) , TODAY()  -  DATEVALUE(CreatedDate), TODAY() -QPMS__Closed_Date__c )</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Owner</fullName>
                </value>
                <value>
                    <fullName>Change Due Date</fullName>
                </value>
                <value>
                    <fullName>Maintenance Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>Stores Approval Group value</description>
        <inlineHelpText>Stores Approval Group value</inlineHelpText>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Required</description>
        <inlineHelpText>Approval Required</inlineHelpText>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <description>Approval Status</description>
        <inlineHelpText>Approval Status</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver 1</description>
        <inlineHelpText>Approver 1</inlineHelpText>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApproverMaintenances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver 2</description>
        <inlineHelpText>Approver 2</inlineHelpText>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApproverMaintenances2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver 3</description>
        <inlineHelpText>Approver 3</inlineHelpText>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApproverMaintenances3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver</description>
        <inlineHelpText>Approver</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApproverMaintenance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Profile_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; QPMS__Asset_Profile__c ,   LEFT(QPMS__Asset_Profile__r.Name, 30), &apos;_blank&apos; )</formula>
        <label>Asset Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Profile_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Profile Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Maintenances3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Name</label>
        <referenceTo>QPMS__Asset_Profile__c</referenceTo>
        <relationshipLabel>Maintenances</relationshipLabel>
        <relationshipName>Maintenances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorized_Entity_Names__c</fullName>
        <description>Authorized Entity Names</description>
        <inlineHelpText>Authorized Entity Names</inlineHelpText>
        <label>Authorized Entity Names</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorized_Entity__c</fullName>
        <description>Authorized Entity users</description>
        <inlineHelpText>Authorized Entity users</inlineHelpText>
        <label>Authorized Entity</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Bypass_Initiation_and_Resolution_step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypass Initiation and Resolution step</description>
        <inlineHelpText>Bypass Initiation and Resolution step</inlineHelpText>
        <label>Bypass Initiation and Resolution step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__CSMS_Standard_Title__c</fullName>
        <formula>QPMS__CSMS_Standard__r.QPMS__Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSMS Standard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CSMS_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSMS Standard</description>
        <inlineHelpText>CSMS Standard</inlineHelpText>
        <label>CSMS Standard</label>
        <referenceTo>QPMS__CSMS_Standard__c</referenceTo>
        <relationshipLabel>Maintenances</relationshipLabel>
        <relationshipName>Maintenances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ChangeFieldApprovalStatus__c</fullName>
        <label>ChangeFieldApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Closed_Date__c</fullName>
        <description>Used for calculating age of maintenance in void or closed status</description>
        <inlineHelpText>Used for calculating age of maintenance in void or closed status</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <description>CurrentApprovalSequenceNumber</description>
        <inlineHelpText>CurrentApprovalSequenceNumber</inlineHelpText>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <description>due date of a maintenance record</description>
        <inlineHelpText>due date of a maintenance record</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Calibration security value</description>
        <inlineHelpText>Calibration security value</inlineHelpText>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initial Submitter</description>
        <inlineHelpText>Initial Submitter</inlineHelpText>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Maintenances_Initial_Submitter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <description>Stores the logged in user site public group and inherited from Asset Profile</description>
        <inlineHelpText>Stores the logged in user site public group and inherited from Asset Profile</inlineHelpText>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Instructions__c</fullName>
        <description>Instructions</description>
        <inlineHelpText>Instruction of maintenance</inlineHelpText>
        <label>Instructions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_Schedule_Type_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>holds the value of Schedule type Disabled or Not</description>
        <inlineHelpText>holds the value of Schedule type Disabled or Not</inlineHelpText>
        <label>Is Schedule Type Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Maintenance_Name__c</fullName>
        <description>Standard Listview Fix</description>
        <formula>HYPERLINK(&quot;/apex/maintenance?Id=&quot; &amp; Id, Name ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Due_Date__c</fullName>
        <description>New Due Date</description>
        <inlineHelpText>New Due Date</inlineHelpText>
        <label>New Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Maintenances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Owner_DueDate__c</fullName>
        <description>Note To Approver Owner/DueDate</description>
        <inlineHelpText>Note To Approver Owner/DueDate</inlineHelpText>
        <label>Note To Approver Owner/DueDate</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>Note To Approver</description>
        <inlineHelpText>Note To Approver</inlineHelpText>
        <label>Note To Approver</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Performed By is a user who performed the calibration.</description>
        <label>Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Maintenances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Purpose__c</fullName>
        <label>Purpose</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason_For_Void__c</fullName>
        <label>Reason For Void</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Code__c</fullName>
        <description>Resolution Code</description>
        <inlineHelpText>Resolution Code</inlineHelpText>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maintenance</fullName>
                    <default>true</default>
                    <label>Maintenance</label>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Comment__c</fullName>
        <description>Resolution Comment</description>
        <inlineHelpText>Resolution Comment</inlineHelpText>
        <label>Resolution Comment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Schedule_Assigned_User_Name__c</fullName>
        <formula>QPMS__Schedule_Assigned_User__r.FirstName +&apos; &apos;+ QPMS__Schedule_Assigned_User__r.LastName</formula>
        <label>Schedule Assigned User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Schedule_Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Capturing the schedule Assigned user to auto populate in Maintenance Task</description>
        <label>Schedule Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Maintenances2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Schedule_Type__c</fullName>
        <description>Schedule Type</description>
        <inlineHelpText>Schedule Type</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Frequency</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>QPMS__Schedule__c</referenceTo>
        <relationshipLabel>Maintenances</relationshipLabel>
        <relationshipName>Maintenances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>Sequence</description>
        <inlineHelpText>Sequence</inlineHelpText>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>Signed Off Details</description>
        <inlineHelpText>Signed Off Details</inlineHelpText>
        <label>Signed Off Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Track_Spare_Part_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Track Spare Part Inventory</description>
        <inlineHelpText>To Track Spare Part Inventory</inlineHelpText>
        <label>Track Spare Part Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Validate_Against_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Validate against inventory</description>
        <inlineHelpText>To Validate against inventory</inlineHelpText>
        <label>Validate Against Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__View_Only_Entity_Names__c</fullName>
        <description>View Only Entity Names</description>
        <inlineHelpText>View Only Entity Names</inlineHelpText>
        <label>View Only Entity Names</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__View_Only_Entity__c</fullName>
        <description>View Only Entity users</description>
        <inlineHelpText>View Only Entity users</inlineHelpText>
        <label>View Only Entity</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Maintenance</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>QPMS__Maintenance_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Maintenance Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>